General improvements, simplification, refactor